1.10-even-more-services/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: even-more-services-svc
spec:
  type: ClusterIP
  selector:
    app: even-more-services
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
